# eecs583-final-project

./: .gitignore  CMakeLists.txt  InterferenceGraphGenerator.cpp  README.md  X86IGGenerator.cpp  graph_coloring_result.csv  requirements.txt  workflow.ipynb
IG-generator/: CMakeLists.txt  IG-generator.cpp
Test/: interference.csv  machine_instruction.txt  run.sh  test1  test1.c  test1.cpp  test1.s  test2  test2.c  test3.c  test3_scanf_mir.txt  test4.c  test4.s  test4_noscanf_mir.txt
demo/: entry.py  hw2correct5  hw2correct5_ig.csv  hw2correct6  hw2correct6.ll  hw2correct6.s  hw2correct6_ig.csv  iggenerator.sh  interference.csv  model.py  model_output.csv  regalloc.sh  test3  test4  test4_ig.csv  utils.py  vr_tracking.csv  workflow.ipynb
interference-graph/: interference.csv
machine-function-pass/: RegAlloc.cpp  X86IGGenerator.cpp  X86TargetMachine.cpp
miscel/: RegAlloc.cpp
train-model/: paper_results.txt  results  train_dl.ipynb  train_tensorflow.ipynb
